# libwebrtc

./: README.md
include/: typedefs.h
include/modules/audio_processing/aec/: echo_cancellation.h
jni/: Android.mk  Application.mk
jni/src/webrtc/: meson.build
jni/src/webrtc/api/: meson.build
jni/src/webrtc/common_audio/: meson.build
jni/src/webrtc/modules/: meson.build
jni/src/webrtc/modules/audio_coding/: meson.build
jni/src/webrtc/modules/audio_processing/: meson.build
jni/src/webrtc/modules/audio_processing/aec/include/: echo_cancellation.h
jni/src/webrtc/modules/audio_processing/aec3/: reverb_frequency_response.h
jni/src/webrtc/modules/audio_processing/agc2/rnn_vad/: BUILD.gn
jni/src/webrtc/modules/audio_processing/transient/: file_utils.h
jni/src/webrtc/rtc_base/: logging.cc  meson.build  platform_thread_types.cc
jni/src/webrtc/rtc_base/system/: arch.h  warn_current_thread_is_deadlocked.h
jni/src/webrtc/system_wrappers/: meson.build
